[package]
name = "teeint"
version = "0.1.2"
edition = "2021"
authors = ["Edgar <git@edgarluque.com>"]
description = "A teeworlds variable int packer/unpacker."
repository = "https://github.com/edg-l/teeint/"
license = "MIT OR Apache-2.0"
keywords = ["ddnet", "teeworlds", "packer", "unpacker"]
categories = ["algorithms", "compression"]
documentation = "https://docs.rs/teeint"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
